     represent a set of barcodes. This change flags the presence
     of other barcodes by appending the number of the remaining
     barcodes with a plus sign to the barcode string. Example:
     ATCGATCG-ATCGAAAA[+143]
   - A comment is added to npg_qc::autoqc::results::tag_metrics
     object to explain the above tag sequence notation if it is
     present.
   - More properties are set for tag zero in tag_metrics object
     to make the definition of tag zero for Elembio lanes identical
     to the one for Illumina lanes.
   - The code is refactored to avoid repetitions and to make
     convert_run_stats_to_tag_metrics function more concise.
 - Information about multiple tags per sample representation is added
   to the tag metrics SeqQC info section.

release 74.2.0 (2025-07-16)
 - Implemented a library npg_qc::elembio::run_stats for parsing Elembio
   RunStats.json files. These files are generated by bases2fastq, Elembio's
   demultiplexer.
 - Implemented a script elembio_runstats_parser.pl that uses data in Elembio's
   RunStats.json file to generate per-lane JSON files for
   npg_qc::autoqc::results::tag_metrics objects.
 - Add optional tile limits to Illumina interop files parsing

release 74.1.0 (2025-06-20)
 - To allow for lane-level QC assessment of Elembio data in the absence of
   results of library-level QC results, relaxed the rules for assigning the
   final QC outcome for a pooled lane for non-Illumina data.
   - npg_qc::mqc::outcomes 'save' method gets a new optional boolean argument,
     non_illumina_data, false by default. If this argument is true, at a point
     of saving a final QC outcome for a lane an attempt to finalise
     library/plex-level QC outcomes is not made.
   - SeqQC QcOutcomes controller uses information about the manufacturer of
     the instrument the sequencing experiment was set up on when updating
     QC outcomes (see above).
   - For an Elembio run the template for rendering a row in a SeqQC summary